<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/action_bag"
        android:icon="@drawable/ic_group_black_18dp"
        android:title="@string/bag" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/menu_blood_donors"
        android:icon="@drawable/ic_blood"
        android:title="@string/menu_blood" />
    <item
        android:id="@+id/menu_notifications"
        android:title="@string/menu_notifications"
        android:icon="@drawable/ic_notifications_black" />

</menu>
